--- a/server/package.json
+++ b/server/package.json
@@ -1,20 +1,30 @@
 {
-  "name": "server",
-  "module": "index.ts",
-  "type": "module",
-  "private": true,
-  "devDependencies": {
-    "@types/bun": "latest",
-    "@types/cors": "^2.8.17",
-    "@types/express": "^5.0.1",
-    "@types/multer": "^1.4.12"
-  },
-  "peerDependencies": {
-    "typescript": "^5"
-  },
-  "dependencies": {
-    "cors": "^2.8.5",
-    "express": "^5.1.0",
-    "multer": "^1.4.5-lts.2"
-  }
+	"name": "server",
+	"module": "index.ts",
+	"type": "module",
+	"scripts": {
+		"dev": "bun --watch index.ts",
+		"dev:worker": "bun --watch worker.ts"
+	},
+	"private": true,
+	"devDependencies": {
+		"@types/bun": "latest",
+		"@types/cors": "^2.8.17",
+		"@types/express": "^5.0.1",
+		"@types/multer": "^1.4.12"
+	},
+	"peerDependencies": {
+		"typescript": "^5"
+	},
+	"dependencies": {
+		"@langchain/community": "^0.3.42",
+		"@langchain/core": "^0.3.54",
+		"@langchain/ollama": "^0.2.0",
+		"@langchain/qdrant": "^0.1.2",
+		"bullmq": "^5.52.1",
+		"cors": "^2.8.5",
+		"express": "^5.1.0",
+		"multer": "^1.4.5-lts.2",
+		"pdf-parse": "^1.1.1"
+	}
 }
